--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
               <a class="nav-link active" href="https://developer.pencil.domains">Stake</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://developer.pencil.domains/agreement">Agreement</a>
+              <a class="nav-link" href="https://developer.pencil.domains/agreement.html">Agreement</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://pencil.domains" target="_blank">Home</a>
