--- a/agreement.html
+++ b/agreement.html
@@ -140,10 +140,10 @@
               <a class="nav-link" aria-current="page" href="stake.html"></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://developer.pencil.domains">Stake</a>
+              <a class="nav-link active" href="https://developer.pencil.domains">Stake</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="https://developer.pencil.domains/tos">Agreement</a>
+              <a class="nav-link" href="https://developer.pencil.domains/agreement.html">Agreement</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="https://pencil.domains" target="_blank">Home</a>
