--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
         <h3 class="display-3 font-weight-bold">Every reason to turn your TLD into a Business.</h3>
-        <h6 class="display-6 font-weight-bold"><a class="display-7 font-weight-bold lead py-2 d-none d-md-inline-block" href="https://developer.com/agreement"
-          target="_blank">Pencil Developer Program License Agreement ></a></h6>
+        <h6 class="display-6 font-weight-bold"><a class="display-7 font-weight-bold lead py-2 d-none d-md-inline-block"
+            href="https://developer.com/agreement" target="_blank">Pencil Developer Program License Agreement ></a></h6>
       </div>
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
@@ -207,9 +207,11 @@
       <div class="my-3 p-3">
         <h4 class="display-6 font-weight-bold">We do not use emails.</h4>
         <h6 class="display-7 font-weight-bold">
-          <a class="display-7 font-weight-bold lead py-2 d-none d-md-inline-block" href="https://twitter.com/pencildomains"
-          target="_blank">I agree Pencil Developer Program License Agreement ></a>
-          .</h6>
+          <a class="display-7 font-weight-bold lead py-2 d-none d-md-inline-block"
+            href="https://twitter.com/pencildomains" target="_blank">I agree Pencil Developer Program License Agreement
+            ></a>
+          .
+        </h6>
       </div>
 
     </div>
@@ -300,7 +302,8 @@
         <li><a class="link-secondary" href="https://pencil.domains/privacy.html" target="_blank">Privacy</a></li>
         <li><a class="link-secondary" href="https://pencil.domains/answers.html" target="_blank">Answers</a></li>
         <li><a class="link-secondary" href="https://pencil.domains/trademark.html" target="_blank">Trademarks</a></li>
-        <li><a class="link-secondary" href="https://developer.pencil.domains/agreement.html" target="_blank">Agreement</a>
+        <li><a class="link-secondary" href="https://developer.pencil.domains/agreement.html"
+            target="_blank">Agreement</a>
       </ul>
     </div>
     <a>hs1qgaxmfpqn4l3svyj32tn3n780qnc6yq7vf8av6u</a>
