--- a/agreement.html
+++ b/agreement.html
@@ -707,6 +707,10 @@
         <p> 6.4 You will not be able to claim custody of the TLD from Pencil if there is at least 1 active SLD customer
           related to your TLD.
         </p>
+        <p> 6.5 Pencil will not be able to transfer the TLD to any company.
+        </p>
+        <p> 6.6 Assuming a company acquires Pencil Works, LLC. Pencil Works, LLC. will not transfer its TLDs without the prior consent of the original owner.
+        </p>
         <p> 7. Legal Consequences
         </p>
         <p> The relationship between You and Pencil established by this Schedule 1 may have important legal consequences
