--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       <div class="my-3 p-3">
         <h3 class="display-3 font-weight-bold">Every reason to turn your TLD into a Business.</h3>
         <h6 class="display-6 font-weight-bold"><a class="display-7 font-weight-bold lead py-2 d-none d-md-inline-block"
-            href="https://developer.com/agreement" target="_blank">Pencil Developer Program License Agreement ></a></h6>
+            href="https://developer.pencil.domains/agreement.html">Pencil Developer Program License Agreement ></a></h6>
       </div>
       <div class="d-md-flex flex-md-equal w-100 my-md-3 pl-md-3">
         <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
