--- a/agreement.html
+++ b/agreement.html
@@ -75,7 +75,7 @@
   <header class="site-header sticky-top py-1">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Ninth navbar example">
       <div class="container-xl">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="https://pencil.domains" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" width="110" height="30" viewBox="0 0 15439 4096">
             <defs>
               <linearGradient id="a" x1="0%" x2="50%" y1="47.401%" y2="56.415%">
@@ -109,7 +109,10 @@
         <div class="collapse navbar-collapse" id="navbarsExample07XL">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0 flex-grow-1 justify-content-between">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="stake.html"></a>
+              <a class="nav-link" aria-current="page" href=""></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link active" href="https://fastest.pencil.domains" target="_blank">Store</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="https://developer.pencil.domains">Stake</a>
@@ -770,6 +773,7 @@
       <h5>About us</h5>
       <ul class="list-unstyled text-small">
         <li><a class="link-secondary" href="https://pencil.domains/index.html" target="_blank">Home</a></li>
+        <li><a class="link-secondary" href="https://fastest.pencil.domains/" target="_blank">Store</a></li>
         <li><a class="link-secondary" href="https://pencil.domains/domains.html" target="_blank">Domains</a></li>
         <li><a class="link-secondary" href="https://www.niami.io/p/246f247f89cb1336ac19710407f43300"
             target="_blank">Portfolio</a></li>
