--- a/index.html
+++ b/index.html
@@ -136,6 +136,14 @@
 <main>
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-white">
     <h1 class="display-2 font-weight-bold">Welcome Pencil Developer.</h1>
+    <form action="http://fastest.pencil.domains/cart.php" method="GET">
+      <div class="form-group">
+          <input type="hidden" name="a" value="add">
+          <input type="hidden" name="domain" value="register">
+          <input type="text" class="form-control" name="query" id="domain-search" placeholder="Get now your domain">   
+      </div>
+      <button type="submit" class="btn btn-primary">Buy now</button>
+    </form>
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
         <h3 class="display-3 font-weight-bold">Every reason to turn your TLD into a Business.</h3>
