--- a/index.html
+++ b/index.html
@@ -133,7 +133,10 @@
 <!-- Se abre Main -->
 <main>
   <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-white">
-    <h1 class="display-2 font-weight-bold">Welcome Pencil Developer.</h1>
+    <h1 class="display-2 font-weight-bold">WWDBC ™</h1>
+    <h2 class="display-4 font-weight-bold">World Wide Developer</h2>
+    <h2 class="display-4 font-weight-bold">Blockchain Conference ™</h2>
+    <h2 class="display-6 font-weight-bold">Summer 2022</h2>
     <form action="https://fastest.pencil.domains/cart.php" method="GET">
       <div class="form-group">
           <input type="hidden" name="a" value="add">
