--- a/index.html
+++ b/index.html
@@ -207,13 +207,17 @@
         <li><a class="link-secondary" href="https://handyhost.computer/" target="_blank">HandyOSS</a></li>
         <li><a class="link-secondary" href="https://twitter.com/Steven_McKie/" target="_blank">Steven D. McKie</a></li>
       </ul>
-    </div>
-    <div class="col-6 col-md">
       <h5>Officially Listed</h5>
       <ul class="list-unstyled text-small">
         <li><a class="link-secondary" href="https://www.theshake.xyz/Resources/" target="_blank">TheShake/</a></li>
       </ul>
-      <h5>Our Metaverse Offices</h5>
+    </div>
+    <div class="col-6 col-md">
+      <h5>Canarchain</h5>
+      <ul class="list-unstyled text-small">
+        <li><a class="link-secondary" href="https://canarchain.org" target="_blank">Canarchain</a></li>
+      </ul>
+      <h5>Metaverse Offices</h5>
       <ul class="list-unstyled text-small">
         <li><a class="link-secondary" href="https://pencil.domains/metaverse-offices.html" target="_blank">Offices
             Directory</a></li>
