--- a/index.html
+++ b/index.html
@@ -213,11 +213,11 @@
       <h5>Canarchain</h5>
       <ul class="list-unstyled text-small">
         <li><a class="link-secondary" href="https://canarchain.org" target="_blank">Canarchain</a></li>
-      </ul>
-      <h5>Metaverse Offices</h5>
-      <ul class="list-unstyled text-small">
-        <li><a class="link-secondary" href="https://pencil.domains/metaverse-offices.html" target="_blank">Offices
-            Directory</a></li>
+        <li><a class="link-secondary" href="https://solscan.io/token/6dmkrp3XjSGyd2kWQCnKtvaufBR4ov7ZDAsrWbGbYTbX" target="_blank">Canarcoin</a></li>
+        <li><a class="link-secondary" href="https://solscan.io/token/6dmkrp3XjSGyd2kWQCnKtvaufBR4ov7ZDAsrWbGbYTbX#txs" target="_blank">Transactions</a></li>
+        <li><a class="link-secondary" href="https://solscan.io/token/6dmkrp3XjSGyd2kWQCnKtvaufBR4ov7ZDAsrWbGbYTbX#holders" target="_blank">Holders</a></li>
+        <li><a class="link-secondary" href="https://solscan.io/token/6dmkrp3XjSGyd2kWQCnKtvaufBR4ov7ZDAsrWbGbYTbX#analysis" target="_blank">Analysis</a></li>
+        <li><a class="link-secondary" href="https://solscan.io/token/6dmkrp3XjSGyd2kWQCnKtvaufBR4ov7ZDAsrWbGbYTbX#markets" target="_blank">Markets</a></li>
       </ul>
     </div>
     <div class="col-6 col-md">
@@ -225,7 +225,9 @@
       <ul class="list-unstyled text-small">
         <a class="link-secondary" href="https://twitter.com/pencildomains" target="_blank">Twitter</a>
         <li><a class="link-secondary" href="https://pencil.domains/index.html" target="_blank">Home</a></li>
-        <li><a class="link-secondary" href="https://fastest.pencil.domains/" target="_blank">Store</a></li>
+        <li><a class="link-secondary" href="https://pencil.domains/metaverse-offices.html" target="_blank">Metaverse Offices
+          </a></li>
+     <li><a class="link-secondary" href="https://fastest.pencil.domains/" target="_blank">Store</a></li>
         <li><a class="link-secondary" href="https://www.niami.io/p/246f247f89cb1336ac19710407f43300"
             target="_blank">Portfolio</a></li>
         <li><a class="link-secondary" href="http://www.newsroom.pencil.domains/" target="_blank">Newsroom</a></li>
