--- a/index.html
+++ b/index.html
@@ -82,23 +82,27 @@
             </li>
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="https://pencil.domains/domains.html"
-                target="_blank" target="_blank">Domains</a>
+                target="_blank">Domains</a>
             </li>
           <li class="nav-item active">
             <a class="nav-link" aria-current="page" href="https://developer.pencil.domains"
-              target="_blank" target="_blank">Developer</a>
+              target="_blank">Developer</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="https://canarchain.org"
-              target="_blank" target="_blank">Canarchain</a>
+              target="_blank">Canarchain</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="https://pencil.domains/metaverse-offices.html"
-              target="_blank" target="_blank">Metaverse Offices</a>
+              target="_blank">Metaverse Offices</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="https://pencil.domains/blog.html"
+              target="_blank">Blog</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="https://pencil.domains/support.html"
-              target="_blank" target="_blank">Support</a>
+              target="_blank">Support</a>
           </li>
             <a class="py-2" href="https://twitter.com/pencildomains" aria-label="" target="_blank">
               <?xml version="1.0" encoding="UTF-8"?>
