--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
     <h2 class="display-4 font-weight-bold">World Wide Developer</h2>
     <h2 class="display-4 font-weight-bold">Blockchain Conference ™</h2>
     <h2 class="display-6 font-weight-bold">Soon 2022</h2>
-    <form action="https://fastest.pencil.domains/cart.php" method="GET">
-      <div class="form-group">
-          <input type="hidden" name="a" value="add">
-          <input type="hidden" name="domain" value="register">
-          <input type="text" class="form-control" name="query" id="domain-search" placeholder="Get now your domain">   
-      </div>
-      <button type="submit" class="btn btn-primary">Buy now</button>
-    </form>
+ <!--      <form action="https://fastest.pencil.domains/cart.php" target="_blank" method="GET">
+        <div class="form-group">
+            <input type="hidden" name="a" value="add">
+            <input type="hidden" name="domain" value="register">
+            <input type="text" class="form-control" name="query" id="domain-search" placeholder="Get now your domain">   
+        </div>
+        <button type="submit" class="btn btn-primary">Buy now</button>
+      </form>  -->
     <div class="bg-light mr-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center overflow-hidden">
       <div class="my-3 p-3">
         <h3 class="display-3 font-weight-bold">Every reason to turn your TLD into a Business.</h3>
