--- a/agreement.html
+++ b/agreement.html
@@ -700,7 +700,7 @@
      <li><a class="link-secondary" href="https://fastest.pencil.domains/" target="_blank">Store</a></li>
         <li><a class="link-secondary" href="https://www.niami.io/p/246f247f89cb1336ac19710407f43300"
             target="_blank">Portfolio</a></li>
-        <li><a class="link-secondary" href="https://www.newsroom.pencil.domains/" target="_blank">Newsroom</a></li>
+        <li><a class="link-secondary" href="https://newsroom.pencil.domains" target="_blank">Newsroom</a></li>
         <li><a class="link-secondary" href="https://penc.medium.com" target="_blank">Medium</a></li>
       </ul>
     </div>
