--- a/agreement.html
+++ b/agreement.html
@@ -80,25 +80,28 @@
           <div class="collapse navbar-collapse" id="navbarsExample07XL">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 flex-grow-1 justify-content-between">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="https://pencil.domains/domains.html">Domains</a>
+                <a class="nav-link" aria-current="page" href="https://pencil.domains/domains.html"
+                  target="_blank">🌐 Domains</a>
               </li>
-            <li class="nav-item active">
-              <a class="nav-link" aria-current="page" href="https://developer.pencil.domains"
-                target="_blank">Developer</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="https://canarchain.org"
-                target="_blank">Canarchain</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="https://pencil.domains/metaverse-offices.html">Metaverse Offices</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="https://newsroom.pencil.domains" target="_blank">Newsroom</a>          
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="https://pencil.domains/support.html">Support</a>
-            </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://developer.pencil.domains"
+                  target="_blank">🧑‍💻 Developer</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://canarchain.org" target="_blank">🧊 Canarchain</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://pencil.domains/metaverse-offices.html"
+                  target="_blank">♾️ Metaverse Offices</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://newsroom.pencil.domains"
+                  target="_blank">📰 Newsroom</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="https://pencil.domains/support.html"
+                  target="_blank">💭 Support</a>
+              </li>
             <a class="py-2" href="https://twitter.com/pencildomains" aria-label="" target="_blank">
               <?xml version="1.0" encoding="UTF-8"?>
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-twitter"
